--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,13 +1,13 @@
 ---
 title: Hello World
-description: Your first document
+description: Mon premier document
 ---
 
-Welcome to the docs! You can start writing documents in `/content/docs`.
+Bienvenue dans Fumadocs, un générateur de documentation basé sur Next.js et MDX.
 
-## What is Next?
+## Ensuite?
 
 <Cards>
-  <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
-  <Card title="Learn more about Fumadocs" href="https://fumadocs.vercel.app" />
+  <Card title="En apprendre plus sur Next.js" href="https://nextjs.org/docs" />
+  <Card title="En apprendre plus sur Fumadocs" href="https://fumadocs.vercel.app" />
 </Cards>
