remove test doc page, add icon support for title doc page, ordering with meta.json

--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,6 +1,7 @@
 ---
-title: Introduction
+title: Premiers pas
 description: Guide complet pour démarrer avec Swell
+icon: BookOpenText
 ---
 
 ## Introduction
@@ -50,7 +51,9 @@ une application personnalisée, sans sacrifier la qualité, la maintenabilité o
 Découvrez ci-dessous les fonctionnalités clés de Swell. Cliquez sur une fonctionnalité pour en savoir plus.
 
 - Authentification
+- Structure & Customisation
 - Mode clair/sombre
+- Modélisation des données
 - Commentaires
 - Wishlist
 - Panier
