--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Premiers pas
 description: Guide complet pour démarrer avec Swell
-icon: BookOpenText
+# icon: BookOpenText
 ---
 
 ## Introduction
@@ -51,9 +51,7 @@ une application personnalisée, sans sacrifier la qualité, la maintenabilité o
 Découvrez ci-dessous les fonctionnalités clés de Swell. Cliquez sur une fonctionnalité pour en savoir plus.
 
 - Authentification
-- Structure & Customisation
 - Mode clair/sombre
-- Modélisation des données
 - Commentaires
 - Wishlist
 - Panier
