update documentation descriptions and enhance structure with new sections

--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Premiers pas
-description: Guide complet pour démarrer avec Swell
+description: Découvrez Swell, le starter-kit e-commerce basé sur Laravel.
 # icon: BookOpenText
 ---
 
