--- a/content/docs/local-development.mdx
+++ b/content/docs/local-development.mdx
@@ -1,6 +1,6 @@
 ---
 title: Développement en local
-description: Guide pour exécuter Swell en local
+description: Comment exécuter Swell en local.
 ---
 
 ## Exécution de Swell en local
@@ -59,7 +59,7 @@ Ensuite, optimisez votre application Laravel pour l’environnement de productio
 php artisan optimize
 ```
 
-Cette commande met en cache la configuration, les évènements, les routes, et les vues, ce qui accélère le temps de chargement de l’application.
+Cette commande met en cache la configuration, les évènements, les routes et les vues, ce qui accélère le temps de chargement de l’application.
 
 <Callout title='Production'>
     Pensez à exécuter cette commande à chaque fois que vous déployez ou modifiez la configuration de production.
