organize Swell components into a dedicated subfolder for better project structure and update documentation to reflect changes in component organization

--- a/content/docs/customisation.mdx
+++ b/content/docs/customisation.mdx
@@ -189,6 +189,10 @@ Ces composants couvrent des besoins fréquents de l’interface comme :
 
 - `product-card.tsx`
 
+Afin de mieux structurer le projet, les composants fournis par **Swell** sont organisés dans un sous-dossier dédié :
+`resources/js/components/swell`. Cela permet de clairement les distinguer des composants spécifiques à votre projet, 
+qui peuvent rester à la racine de `components`.
+
 Ces composants peuvent être librement modifiés ou étendus pour répondre aux besoins de votre projet.
 
 <Callout>
