refactor documentation: rename "Actions et Modules" to "Organiser la logique métier avec Actions & Modules" for clarity, update meta.json to include "models", and add new models documentation detailing data structures and customization options

--- a/content/docs/actions-modules.mdx
+++ b/content/docs/actions-modules.mdx
@@ -3,7 +3,7 @@ title: Actions et Modules
 description: Organisation du code métier et fonctionnalités modulaires dans Swell.
 ---
 
-## Actions et Modules
+## Organiser la logique métier avec Actions & Modules
 
 Swell adopte une approche souple pour organiser la logique métier et les fonctionnalités optionnelles.
 Deux concepts complémentaires sont proposés : les **Actions** et les **Modules**.
