update documentation to consistently emphasize "Swell" in bold throughout various sections for improved clarity and branding

--- a/content/docs/actions-modules.mdx
+++ b/content/docs/actions-modules.mdx
@@ -11,7 +11,7 @@ Deux concepts complémentaires sont proposés : les **Actions** et les **Modules
 
 ### Actions
 
-Les **Actions** constituent un pattern central dans Swell pour organiser votre logique métier. 
+Les **Actions** constituent un pattern central dans **Swell** pour organiser votre logique métier. 
 Elles permettent d’isoler des opérations précises 
 <span className='text-fd-muted-foreground text-sm'>(création, mise à jour, suppression, traitements spécifiques)</span>
 dans des classes dédiées situées dans `app/Actions/`.
