--- a/content/docs/architecture.mdx
+++ b/content/docs/architecture.mdx
@@ -14,7 +14,7 @@ et peut être adapté selon vos besoins.
 ### `app/`
 
 Contient la logique Laravel côté serveur : contrôleurs, requêtes, middlewares, etc. 
-Swell y ajoute une structure légère autour des contrôleurs d’administration 
+**Swell** y ajoute une structure légère autour des contrôleurs d’administration 
 <span className='text-fd-muted-foreground text-sm'>(Http/Controllers/Admin)</span> notamment.
 Sans imposer une architecture rigide.
 
