--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -6,10 +6,10 @@ description: Découvrez Swell, le starter-kit e-commerce basé sur Laravel.
 
 ## Introduction
 
-Découvrez Swell, le **starter-kit** e-commerce basé sur Laravel. Ce projet est conçu pour vous fournir une base solide,
+Découvrez **Swell**, le **starter-kit** e-commerce basé sur Laravel. Ce projet est conçu pour vous fournir une base solide,
 avec des fonctionnalités essentielles prêtes à l'emploi pour le développement d'applications e-commerce modernes grâce à **Laravel 12**, **React**, et **Inertia.js**.
 
-Swell est structuré autour de plusieurs éléments principaux :
+**Swell** est structuré autour de plusieurs éléments principaux :
 
 <Cards>
     <Card icon={<Monitor className="text-blue-300" />} title="Frontend" href="/">
@@ -48,7 +48,7 @@ une application personnalisée, sans sacrifier la qualité, la maintenabilité o
 
 ### Fonctionnalités clés
 
-Découvrez ci-dessous les fonctionnalités clés de Swell. Cliquez sur une fonctionnalité pour en savoir plus.
+Découvrez ci-dessous les fonctionnalités clés de **Swell**. Cliquez sur une fonctionnalité pour en savoir plus.
 
 - Authentification
 - Mode clair/sombre
@@ -61,7 +61,7 @@ Découvrez ci-dessous les fonctionnalités clés de Swell. Cliquez sur une fonct
 
 ### Technologies utilisées
 
-Voici les technologies utilisées qui propulsent et pilotent Swell.
+Voici les technologies utilisées qui propulsent et pilotent **Swell**.
 
 - **Laravel 12** : Framework PHP moderne pour le backend.
 - **Inertia.js** : Permet de construire des applications SPA avec Laravel et React.
