--- a/content/docs/local-development.mdx
+++ b/content/docs/local-development.mdx
@@ -5,7 +5,7 @@ description: Comment exécuter Swell en local.
 
 ## Exécution de Swell en local
 
-Pour exécuter Swell en local, utiliser la commande suivante :
+Pour exécuter **Swell** en local, utiliser la commande suivante :
 
 ```bash
 composer run dev
@@ -33,7 +33,7 @@ Pour personnaliser la commande, vous pouvez modifier le script `dev` dans le fic
 
 ## Compiler les assets pour la production
 
-Une fois que vous êtes prêt à déployer Swell, commencez par compiler vos assets frontend avec :
+Une fois que vous êtes prêt à déployer **Swell**, commencez par compiler vos assets frontend avec :
 
 ```bash tab="npm"
 npm run build
