--- a/content/docs/models.mdx
+++ b/content/docs/models.mdx
@@ -15,15 +15,15 @@ tout en profitant d’une intégration fluide avec l’écosystème Swell.
 
 ## Adapter un modèle
 
-Les modèles Swell sont basiquement situés dans le dossier `app/Models`, à l’exception des fonctionnalités
+Les modèles **Swell** sont basiquement situés dans le dossier `app/Models`, à l’exception des fonctionnalités
 optionnelles dont les modèles sont placés dans `app/Modules/Feature/Models`.
 
 Ils sont associés à leurs fichiers de migration respectifs dans `database/migrations` ou
 `Modules/Feature/database/migrations`, permettant de définir la structure des tables correspondantes.
 
 <Callout>
-    Swell n’impose aucune logique métier. Les modèles proposés servent de socle initial, à adapter librement. Pour toute
-    modification de structure ou comportement, référez-vous à la documentation officielle de
+    Swell n’impose aucune logique métier. Les modèles proposés servent de socle initial, à adapter librement. 
+    Pour toute modification de structure ou comportement, référez-vous à la documentation officielle de
     [Laravel](https://laravel.com/docs/12.x/eloquent).
 </Callout>
 
