add new documentation for module management and role seeding, enhancing user guidance on feature activation and role initialization in Swell

--- a/content/docs/actions-modules.mdx
+++ b/content/docs/actions-modules.mdx
@@ -74,5 +74,5 @@ via des commandes artisan <span className='text-fd-muted-foreground text-sm'>(co
 Cette logique favorise une approche modulaire du projet, tout en vous laissant la liberté de personnaliser chaque module à votre guise.
 
 <Callout>
-    Pour plus d’informations sur la publication des modules, consultez la section [Concepts clés](/add-functionnality).
+    Pour en savoir plus sur la publication et la gestion des modules, reportez-vous à la page [Gestion des modules](/modules-management).
 </Callout>
