--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -71,6 +71,8 @@ Voici les technologies utilisées qui propulsent et pilotent **Swell**.
 - **Stripe** : Intégration de la passerelle de paiement pour les transactions sécurisées.
 - **Pest** : Framework de tests pour PHP, utilisé pour garantir la qualité du code.
 
+[En savoir plus sur les technologies utilisées](/technologies)
+
 ## Contribution
 
 Nous accueillons volontiers vos retours, suggestions et contributions !
