--- a/content/docs/make-user.mdx
+++ b/content/docs/make-user.mdx
@@ -18,7 +18,7 @@ php artisan swell:make-user
 
 Cette commande te guide à travers plusieurs questions :
 
-- **Role** (utilisateur, client, admin)
+- **Role** (visiteur, client, admin)
 - **Adresse e-mail** de l’utilisateur
 - **Mot de passe** (saisi masqué)
 - **Nom** de l’utilisateur
@@ -32,7 +32,7 @@ Cette commande te guide à travers plusieurs questions :
 ```bash
 php artisan swell:make-user
 
-Rôle (user/customer/admin) : admin
+Rôle (visitor/customer/admin) : admin
 Adresse e-mail : admin@exemple.com
 Mot de passe : ********
 Nom : Martin Dupont
