--- a/content/docs/modules-management.mdx
+++ b/content/docs/modules-management.mdx
@@ -1,9 +1,9 @@
 ---
-title: Ajouter une fonctionnalité
-description: Activer une nouvelle fonctionnalité via les modules optionnels de Swell.
+title: Gestion des modules
+description: Activer, personnaliser ou retirer des fonctionnalités via la gestion des modules dans Swell.
 ---
 
-## Ajouter une fonctionnalité depuis les modules optionnels
+## Gestion des modules : activer ou retirer des fonctionnalités
 
 **Swell** adopte une approche modulaire pour enrichir votre application : 
 chaque fonctionnalité additionnelle est proposée sous forme de module optionnel, prêt à être activé, personnalisé ou retiré selon vos besoins.
