--- a/content/docs/technologies.mdx
+++ b/content/docs/technologies.mdx
@@ -14,7 +14,7 @@ performante et évolutive. Chaque choix technologique vise à simplifier la cré
 son écosystème riche pour offrir un environnement de développement moderne, fiable et flexible.
 
 <Callout>
-    Toutes les fonctionnalités de **Swell** sont pensées pour exploiter au mieux les atouts de Laravel, tout en restant simples à personnaliser selon vos besoins.
+    Toutes les fonctionnalités de Swell sont pensées pour exploiter au mieux les atouts de Laravel, tout en restant simples à personnaliser selon vos besoins.
 </Callout>
 
 ### Inertia.js
