--- a/content/docs/role-seeder.mdx
+++ b/content/docs/role-seeder.mdx
@@ -1,7 +1,12 @@
 ---
-title: Ajouter les rôles
-description: Initialiser les rôles de base dans la base de données avec le RoleSeeder.
+title: Seeders
+description: Initialiser rapidement des données essentielles ou de développement dans la base de données avec les seeders de Swell.
 ---
+
+## Les seeders dans Swell
+
+Les seeders permettent d’ajouter automatiquement des données essentielles ou de test dans la base de données. 
+**Swell** propose plusieurs seeders pour faciliter l’installation, le développement et les tests de votre application.
 
 ## Initialiser les rôles avec le RoleSeeder
 
@@ -9,7 +14,7 @@ Le `RoleSeeder` permet d’ajouter automatiquement les rôles essentiels à la b
 
 **Swell** s’appuie sur le package [spatie/laravel-permission](https://spatie.be/docs/laravel-permission) pour la gestion des rôles et permissions. Ce package robuste facilite la création, l’attribution et la gestion des rôles dans Laravel.
 
-### Pourquoi utiliser un seeder de rôles ?
+### Pourquoi utiliser un seeder de rôles ?
 
 - **Gain de temps** : plus besoin de créer manuellement les rôles à chaque nouvelle installation.
 - **Cohérence** : tous les environnements disposent des mêmes rôles de base.
@@ -21,13 +26,16 @@ Le `RoleSeeder` permet d’ajouter automatiquement les rôles essentiels à la b
 
 ### Exemple d’exécution
 
-Pour initialiser les rôles de base, il suffit d’exécuter la commande suivante :
+Pour initialiser les rôles de base, il suffit d’exécuter la commande suivante :
 
 ```bash
 php artisan db:seed --class=RoleSeeder
+
+# Pour repartir d’une base de données vierge :
+php artisan migrate:fresh --seed --seeder=RoleSeeder
 ```
 
-Après exécution, les rôles suivants seront créés :
+Après exécution, les rôles suivants seront créés :
 
 - `admin` : accès complet aux pages Admin.
 - `customer` : regroupe les utilisateurs ayant passé commande.
@@ -35,6 +43,54 @@ Après exécution, les rôles suivants seront créés :
 
 <Callout title="Bon à savoir">
     Adapter le contenu du RoleSeeder selon les besoins spécifiques de ton application.
-
+    
     Pour plus d'info sur la gestion des permissions, voir la documentation de [spatie/laravel-permission](https://spatie.be/docs/laravel-permission)
+</Callout>
+
+## Initialiser des données de développement avec le LocalSeeder
+
+Le `LocalSeeder` est conçu pour faciliter le développement local en injectant des données de test dans la base de données : utilisateurs, produits, catégories, etc. Il permet de simuler un environnement réaliste sans avoir à créer manuellement chaque entrée.
+
+### Exemple d’exécution
+
+```bash
+php artisan db:seed --class=LocalSeeder
+
+# Pour repartir d’une base de données vierge :
+php artisan migrate:fresh --seed --seeder=LocalSeeder
+```
+
+Ce seeder va créer un ensemble de données variées pour que vous puissiez tester l’application dans des conditions proches de la production.
+
+<Callout>
+    Le `LocalSeeder` est à utiliser uniquement en environnement de développement.
+</Callout>
+
+## Générer des produits de test avec le LocalProductSeeder
+
+Le `LocalProductSeeder` permet de générer rapidement un catalogue de produits fictifs pour tester les fonctionnalités e-commerce de Swell (listing, recherche, panier, etc.).
+
+### Exemple d’exécution
+
+```bash
+php artisan db:seed --class=LocalProductSeeder
+
+# Pour repartir d’une base de données vierge :
+php artisan migrate:fresh --seed --seeder=LocalProductSeeder
+```
+
+Après exécution, plusieurs produits de test seront disponibles dans la boutique, avec des prix, stocks et descriptions variés.
+
+<Callout>
+    Le `LocalProductSeeder`, appelé par le `LocalSeeder`, centralise la génération de produits de test réalistes pour simuler un vrai catalogue sans alourdir le `LocalSeeder`.
+</Callout>
+
+## Conseils et bonnes pratiques
+
+- Exécutez les seeders adaptés à votre environnement : `RoleSeeder` pour la base et `LocalSeeder` pour le développement.
+- N’utilisez jamais les seeders de développement (`LocalSeeder`) en production.
+- Personnalisez le contenu des seeders selon les besoins spécifiques de votre projet.
+
+<Callout>
+    Pour aller plus loin, consultez la documentation Laravel sur les seeders : [https://laravel.com/docs/seeding](https://laravel.com/docs/seeding)
 </Callout>
