refactor documentation to improve card component structure by removing href attributes and enhance installation guide with tabbed code blocks for better clarity

--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -11,27 +11,27 @@ avec des fonctionnalités essentielles prêtes à l'emploi pour le développemen
 **Swell** est structuré autour de plusieurs éléments principaux :
 
 <Cards>
-    <Card icon={<Monitor className="text-blue-300" />} title="Frontend" href="/">
+    <Card icon={<Monitor className="text-blue-300" />} title="Frontend">
         L’interface de Swell propose un rendu soigné et des interactions fluides, conçue pour les plateformes e-commerce modernes.
     </Card>
 
-    <Card icon={<Cpu className="text-purple-300" />} title="Backend" href="/">
+    <Card icon={<Cpu className="text-purple-300" />} title="Backend">
         Le backend Laravel 12 propose une architecture solide notamment via des actions, des resources controllers....
     </Card>
 
-    <Card icon={<FlaskConical className="text-emerald-300" />} title="Tests & Qualité" href="/">
+    <Card icon={<FlaskConical className="text-emerald-300" />} title="Tests & Qualité">
         Swell embarque des tests unitaires et fonctionnels via Pest (PHP) pour maintenir la stabilité et la qualité du code.
     </Card>
 
-    <Card icon={<Database />}  title="Structure des données" href="/">
+    <Card icon={<Database />}  title="Structure des données">
         La structure des données dans Swell est personnalisable : modèles, relations et schémas s’adaptent à vos besoins.
     </Card>
 
-    <Card icon={<Terminal />} title="Commandes & Dev Tools" href="/">
+    <Card icon={<Terminal />} title="Commandes & Dev Tools">
         Artisan commands personnalisées, seeders, factories, middlewares — pour gagner du temps dès le début.
     </Card>
 
-    <Card icon={<ShieldCheck className="text-red-300" />} title="Sécurité" href="/">
+    <Card icon={<ShieldCheck className="text-red-300" />} title="Sécurité">
         Swell intègre des pratiques de sécurité modernes pour protéger vos données et celles de vos clients.
     </Card>
 </Cards>
