--- a/content/docs/installation.mdx
+++ b/content/docs/installation.mdx
@@ -7,11 +7,11 @@ description: Guide d'installation de Swell
 
 Vous pouvez installer **Swell** de deux manières : soit avec l’outil Laravel Installer, soit directement via Composer.
 
-```bash title="Laravel Installer"
+```bash tab="Laravel Installer"
 laravel new nom-du-projet --using=swell/starter-kit
 ```
 
-```bash title="Composer"
+```bash tab="Composer"
 composer create-project swell/starter-kit nom-du-projet
 ```
 
