add disclaimer Swell's evolving nature and accessibility as a Laravel starter-kit

--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -72,6 +72,11 @@ Voici les technologies utilisées qui propulsent et pilotent **Swell**.
 
 [En savoir plus sur les technologies utilisées](/technologies)
 
+<Callout>
+    Swell est aussi un projet en constante progression. Il ne prétend pas être le meilleur starter-kit Laravel, ni proposer le code le plus parfait. L’objectif est avant tout d’offrir une base solide, évolutive et pragmatique, tout en restant accessible et agréable à utiliser.
+</Callout>
+
+
 ## Contribution
 
 Nous accueillons volontiers vos retours, suggestions et contributions !
