--- a/content/docs/models.mdx
+++ b/content/docs/models.mdx
@@ -22,8 +22,8 @@ Ils sont associés à leurs fichiers de migration respectifs dans `database/migr
 `Modules/Feature/database/migrations`, permettant de définir la structure des tables correspondantes.
 
 <Callout>
-    Swell n’impose aucune logique métier. Les modèles proposés servent de socle initial, à adapter librement. 
-    Pour toute modification de structure ou comportement, référez-vous à la documentation officielle de
+    Swell n’impose aucune logique métier. Les modèles proposés servent de socle initial, à adapter librement. Pour toute
+    modification de structure ou comportement, référez-vous à la documentation officielle de
     [Laravel](https://laravel.com/docs/12.x/eloquent).
 </Callout>
 
@@ -50,15 +50,14 @@ Ils sont associés à leurs fichiers de migration respectifs dans `database/migr
 | `parent_id`   | `nullable` `nullOnDelete` |
 
 <span className="text-fd-muted-foreground text-sm">BelongsTo(Category).</span> <br />
-<span className="text-fd-muted-foreground text-sm">HasMany(Category).</span> <br />
-<span className="text-fd-muted-foreground text-sm">BelongsToMany(Product).</span>
+<span className="text-fd-muted-foreground text-sm">HasMany(Product).</span>
 
 ### Product
 
 | Champ               | Type                                |
 | ------------------- | ----------------------------------- |
 | `name`              | `string`                            |
-| `slug`              | `string` `unique`                   |
+| `slug`              | `string` `unique` `nullable`        |
 | `sku`               | `string` `unique`                   |
 | `description`       | `text`                              |
 | `short_description` | `string` `max:500`                  |
@@ -72,9 +71,10 @@ Ils sont associés à leurs fichiers de migration respectifs dans `database/migr
 | `meta_description`  | `string` `max:255` `nullable`       |
 | `meta_keywords`     | `string` `max:255` `nullable`       |
 | `brand_id`          | `integer` `restrictOnDelete`        |
-| `collection_id`  | `integer` `nullable` `nullOnDelete` |
+| `category_id`       | `integer` `nullOnDelete`            |
+| `collection_id`     | `integer` `nullable` `nullOnDelete` |
 
-<span className="text-fd-muted-foreground text-sm">BelongsToMany(Category).</span> <br />
+<span className="text-fd-muted-foreground text-sm">BelongsTo(Category).</span> <br />
 <span className="text-fd-muted-foreground text-sm">BelongsTo(Brand).</span> <br />
 <span className="text-fd-muted-foreground text-sm">HasMany(ProductImage).</span> <br />
 <span className="text-fd-muted-foreground text-sm">BelongsTo(Collection).</span> <br />
@@ -83,10 +83,10 @@ Ils sont associés à leurs fichiers de migration respectifs dans `database/migr
 
 ### Collection
 
-| Champ  | Type              |
-| ------ | ----------------- |
+| Champ   | Type              |
+| ------- | ----------------- |
 | `title` | `string`          |
-| `slug` | `string` `unique` |
+| `slug`  | `string` `unique` |
 
 <span className="text-fd-muted-foreground text-sm">HasMany(Product).</span>
 
