update models documentation to rename ProductComment to Review and improve clarity in modules management section

--- a/content/docs/models.mdx
+++ b/content/docs/models.mdx
@@ -103,7 +103,7 @@ Ils sont associés à leurs fichiers de migration respectifs dans `database/migr
 
 <span className="text-fd-muted-foreground text-sm">BelongsTo(Product).</span>
 
-### ProductComment
+### Review
 
 | Champ        | Type                              |
 | ------------ | --------------------------------- |
