--- a/content/docs/modules-management.mdx
+++ b/content/docs/modules-management.mdx
@@ -38,7 +38,7 @@ php artisan swell:enable wishlist
 Cette commande publie les fichiers nécessaires (controllers, modèles, migrations…) et rend la fonctionnalité immédiatement disponible dans votre application.
 
 <Callout>
-    Chaque module est indépendant : vous pouvez en activer plusieurs, les désactiver ou les personnaliser sans impacter le cœur de **Swell**.
+    Chaque module est indépendant : vous pouvez en activer plusieurs, les désactiver ou les personnaliser sans impacter le cœur de Swell.
 </Callout>
 
 ### Personnaliser un module
