adjust functionnalities in index

--- a/content/docs/index.en.mdx
+++ b/content/docs/index.en.mdx
@@ -50,10 +50,11 @@ a custom application, without sacrificing quality, maintainability or performanc
 Discover below the key features of **Swell**. Click on a feature to learn more.
 
 - Authentication
-- Light/Dark mode
+- Product Catalog
+- Shopping cart
+- Theme Management
 - Comments
 - Wishlist
-- Shopping cart
 - Advanced search
 - Stripe integration
 - Admin interface
