--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -50,10 +50,11 @@ une application personnalisée, sans sacrifier la qualité, la maintenabilité o
 Découvrez ci-dessous les fonctionnalités clés de **Swell**. Cliquez sur une fonctionnalité pour en savoir plus.
 
 - Authentification
-- Mode clair/sombre
+- Catalogue produits
+- Panier
+- Gestion du thème
 - Commentaires
 - Wishlist
-- Panier
 - Recherche avancée
 - Intégration Stripe
 - Interface d’administration
